---------------------------------------------------------------------------------------------------
Version: 0.4.0
Date: 2022-04-05
  Bugfixes:
    - Fixing Desync issue when loading a save file where reminder panel is open
---------------------------------------------------------------------------------------------------
Version: 0.3.33
Date: 2022-04-02
  Bugfixes:
    - fixing multiple lines of the same recipe
    - fixing multiple icons for the same worker
    - mitigating Large recipe columns are jerky during handcrafts or research completion 
  Changes:
    - Yellow backgroung for recipes that are currently in research queue
---------------------------------------------------------------------------------------------------
Version: 0.3.32
Date: 2022-03-31
  Bugfixes:
    - fixing crash when opening a fuel item.
---------------------------------------------------------------------------------------------------
Version: 0.3.31
Date: 2022-03-27
  Bugfixes:
    - fixing that fixed recipes are not presented anymore.
  Changes:
    - show mini-recipe panel for improper recipes also
    - show fuel category related information
    - speed information on worker sprites improved
    - show fluid fuel categories and their burners
    - show information concerning modules
---------------------------------------------------------------------------------------------------
Version: 0.3.30
Date: 2022-03-26
  Bugfixes:
    - fixing that hidden recipes for furnances are not presented anymore.
---------------------------------------------------------------------------------------------------
Version: 0.3.29
Date: 2022-03-23
  Changes:
    - Special treatment for zombie recipes 
    - Better treatment for hidden recipes. Present them only when used as fixed-recipe somewhere.
---------------------------------------------------------------------------------------------------
Version: 0.3.28
Date: 2022-03-19
  Bugfixes:
    - fixing crash when creating a BoilingRecipe