@@ -148,3 +148,4 @@ boiler-generic-output-fluidbox=WARNING: "__1__" (__2__) should not have is gener
 fuel-category-empty=WARNING: "__1__" (__2__) does not provide any substance.
 burnt-result-without-fuel-category=WARNING: "__1__" (__2__) defines a burned-result ("__3__" (__4__)) but does not belong to any fuel-category.
 burner-without-fuel-inventory=WARNING: "__1__" (__2__) is defined as a burner whithout fuel inventory.
+missing-item=WARNING: "__1__" (__2__) has no items.
