@@ -2,7 +2,8 @@
 Version: 0.4.0
 Date: 2022-04-05
   Bugfixes:
-    - Fixing Desync issue when loading a save file where reminder panel is open
+    - Mitigating Desync issue when loading a save file where reminder panel is open
+    - Fixing Crash when getting information from mod-defined module-categories
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.33
 Date: 2022-04-02
